# Kintinuous

./: .gitignore
src/: CMakeLists.txt  KintinuousRW.cpp  MainControllerRW.cpp  MainControllerRW.h  PangoVis.cpp  PangoVisRW.cpp  PangoVisRW.h  tdp_test.cpp  vtest.cpp  vtest.hpp  vtest_main.cpp
src/backend/: CholeskyDecomp.cpp  CholeskyDecomp.h  CloudSliceProcessor.cpp  Deformation.cpp  Deformation.h  DeformationGraph.cpp  DeformationGraph.h  DepthCamera.cpp  DepthCamera.h  GraphNode.h  LoopClosureConstraint.h  PNPSolver.cpp  PlaceRecognition.cpp  PlaceRecognition.h  TrackerInterface.cpp  UGP3.cpp  UGP3.h  iSAMInterface.cpp  iSAMInterface.h
src/frontend/: CloudSlice.h  ColorVolume.h  GroundTruthOdometry.cpp  GroundTruthOdometry.h  ICPOdometry.cpp  ICPOdometry.h  KintinuousTracker.cpp  KintinuousTracker.h  OdometryProvider.h  PlaceRecognitionInput.h  RGBDOdometry.cpp  RGBDOdometry.h  TSDFVolume.cpp  TSDFVolume.h
src/utils/: ConfigArgs.h  RedwoodReader.cpp  RedwoodReader.h  ThreadDataPack.cpp  ThreadDataPack.h  ThreadMutexObject.h  ThreadObject.h  types.hpp
